--- a/css/style.css
+++ b/css/style.css
@@ -7,19 +7,12 @@ body {
     background-image: url(../img/line.svg);
     background-repeat-x: no-repeat;
     background-position: center;
+    font-size: 22px;
+    line-height: 1.5;
+    color: #4D5053;
 }
 a {
     text-decoration: none;
-}
-p {
-    color: #4D5053;
-    font-family: Jost;
-    font-size: 22px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 150%;
-    letter-spacing: 0.22px;
-    margin: 0;
 }
 ul, li {
     margin: 0;
@@ -1069,7 +1062,7 @@ article {
         max-width: 570px;
     }
 }
-.subscribe_box {
+.subscribe-box {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -1168,7 +1161,7 @@ article {
     background-color: #FFFFFF;
     padding: 41px 78px;
 }
-.title__blog {
+.thumb__title {
     margin: 0;
 }
 .breadcrumbs {
