--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,52 @@ button {
     margin: 0 auto;
     padding: 0 15px;
 }
+.page {
+    padding-top: 160px;
+    padding-bottom: 160px;
+}
+.title {
+    font-family: 'DM Serif Display', serif;
+    font-size: 50px;
+    line-height: 1.25;
+    font-weight: 400;
+    color: #292F36;
+    margin-top: 0;
+}
+.link {
+    position: relative;
+    color: #fff;
+    padding: 26px 61px 26px 31px;
+    border-radius: 18px;
+    background: #292F36;
+    box-shadow: 0px 10px 20px 0px rgba(192, 192, 192, 0.35);
+    text-decoration: none;
+    display: inline-block;
+    cursor: pointer;
+    font-size: 18px;
+    font-weight: 600;
+    letter-spacing: 0.36px;
+    position: relative;
+    transition: .3s;
+}
+.link::after {
+    content: "";
+    width: 18px;
+    height: 16px;
+    background: url(../img/strelka.svg)no-repeat;
+    display: block;
+    position: absolute;
+    top: 30px;
+    right: 30px;
+    overflow: hidden;
+}
+.link:hover {
+    background-color: #CDA274;
+}
+.link:hover::after {
+    background: url(../img/strelkablack.svg)no-repeat;
+}
+/*HEADER*/
 .header {
     display: flex;
     justify-content: space-between;
@@ -64,9 +110,6 @@ button {
     cursor: pointer; 
 }
 /*SIDEBAR*/
-.page-content {
-    padding: 178px 0;
-}
 .content {
     display: grid;
     grid-template-columns: 1fr 345px;
@@ -426,7 +469,7 @@ button {
     justify-content: center;
 }
 .post__comments {
-    margin-top: 93px;
+    margin: 93px 0 114px 0;
 }
 .post .comments-title {
     font-family: 'DM Serif Display', serif;
@@ -434,9 +477,6 @@ button {
     font-size: 25px;
     line-height: 1.2;
     font-weight: 400;
-}
-.contact-form__checkbox {
-    margin-bottom: 60px;
 }
 .checkbox:checked,
 .checkbox:not(:checked) {
@@ -496,16 +536,23 @@ button {
    background-color: #CDA274;
 }
 /*CONTACT*/
-.thumb__contact {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
+.contact .title {
+    text-align: center;
+    max-width: 634px;
+    margin: 0 auto;
+}
+.thumb__info {
+    text-align: center;
+    background-color: #FFF;
+    border-radius: 37px 37px 0 0;
     position: absolute;
-    bottom: 0%;
-    left: 36.6%;
-    border-radius: 37px 37px 0px 0px;
-    background-color: #FFFFFF;
-    padding: 41px 134px;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    max-width: 560px;
+    margin: 0 auto;
+    padding-top: 41px;
+    padding-bottom: 41px;
 }
 .contact__box {
     display: flex;
@@ -577,20 +624,6 @@ button {
     text-align: right;
 }
 /*TABS*/
-.thumb__portfolio {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    position: absolute;
-    bottom: 0%;
-    left: 36.6%;
-    border-radius: 37px 37px 0px 0px;
-    background-color: #FFFFFF;
-    padding: 41px 125px;
-}
-.page-article {
-    margin-bottom: 214px;
-}
 .tabs {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
@@ -650,12 +683,13 @@ button {
 /*footer*/
 .bg {
     background-color: #F4F0EC;
-    padding: 80px 0;
 }
 .footer {
     display: flex;
-    justify-content: space-between;
     align-items: center;
+    justify-content: space-between;
+    padding: 80px 0;
+    color: #4D5053;
 }
 .footer__info {
     display: flex;
@@ -787,28 +821,15 @@ button {
     margin: 0;
 }
 /*About*/
-.about__section {
-    margin-bottom: 178px;
-}
 .about {
     display: flex;
     justify-content: space-between;
     align-items: center;
     gap: 75px;
-    margin-bottom: 200px;
 }
 .about__box {
     flex-grow: 1;
     flex-basis: calc(100% - 700px);
-}
-.title {
-    max-width: 422px;
-    color: #292F36;
-    font-family: DM Serif Display;
-    font-size: 50px;
-    font-weight: 400;
-    line-height: 125%;
-    letter-spacing: 1px;
 }
 .about__tel {
     display: flex;
@@ -847,75 +868,45 @@ button {
     object-fit: cover;
     z-index: -1;
 }
-.link {
-    position: relative;
-    color: #fff;
-    padding: 26px 55px 26px 31px;
-    border-radius: 18px;
-    background: #292F36;
-    box-shadow: 0px 10px 20px 0px rgba(192, 192, 192, 0.35);
-    text-decoration: none;
-    display: inline-block;
-    cursor: pointer;
-    font-size: 18px;
-    font-weight: 600;
-    line-height: 125%; 
-    letter-spacing: 0.36px;
-    margin-bottom: 43px;
-    font-family: Jost;
-}
-.link::after {
-    content: "";
-    width: 17px;
-    height: 16px;
-    background: url(../img/strelka.svg)no-repeat;
-    display: block;
-    position: absolute;
-    top: 30px;
-    right: 30px;
-    overflow: hidden;
-}
 /*SWIPER*/
-.swiper {
-    width: 100%;
-    height: 674px;
-    flex-shrink: 0;
-    background-color: #F4F0EC;
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-    border-radius: 70px;
+.swiper-feedback {
+    margin-top: 160px;
 }
 .swiper-slide {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    margin: 0 auto;
+    flex-shrink: 0;
+    width: 100%;
+    height: 100%;
+    position: relative;
+    transition-property: transform;
+    display: block;
 }
 .swiper-feedback__slide {
     text-align: center;
     background-color: #F4F0EC;
     border-radius: 70px;
-    padding: 88px 225px 88px;
+    padding: 86px 211px 86px;
     box-sizing: border-box;
 }
 .swiper-text {
-    margin-top: 27px;
-    color: #292F36;
     font-family: 'DM Serif Display', serif;
     font-size: 35px;
+    line-height: 1.25;
     font-style: italic;
-    line-height: 125%; /* 43.75px */
-    letter-spacing: 0.7px;
-    max-width: 750px;
+    color: #292F36;
+    margin-top: 50px;
+    margin-bottom: 34px;
+}
+.swiper-text::before {
+    content: '';
+    background-image: url(../img/kovicki.svg);
+    display: block;
+    width: 31px;
+    height: 23px;
+    margin: 0 auto 27px;
 }
 .swiper-author {
-    margin-top: 34px;
-    font-family: Jost;
     font-size: 25px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 150%; /* 37.5px */
-    letter-spacing: 0.25px;
+    text-transform: uppercase;
 }
 .swiper-feedback__next, .swiper-feedback__prev {
     background-color: #fff;
@@ -948,14 +939,11 @@ button {
     display: flex;
     align-items: center;
     justify-content: space-around;
-    margin: 178px 0;
 }
 /*STATS*/
 .stats__section {
     width: 100%;
     background-color: #F4F0EC;
-    margin-bottom: 178px;
-    padding: 150px 0;
 }
 .stats__list {
     display: flex;
@@ -985,9 +973,6 @@ button {
     color: #CDA274;
 }
 /*ARTICLES*/
-.articles__section {
-    margin-bottom: 178px;
-}
 .title__articles {
     text-align: center;
     margin: 0 auto;
@@ -1043,57 +1028,55 @@ article {
     justify-content: space-between;
 }
 /*SUBSCRIBE*/
-.subscribe__section {
-    margin-bottom: 200px;
-}
-.suscribe {
-    display: flex;
-    padding: 80px 0;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    border-radius: 70px;
+.subscribe {
     background-color: #292F36;
+    border-radius: 70px;
+    text-align: center;
+    color: #FFFFFF;
+    padding: 80px;
 }
-.suscribe {
-    & h2, p {
-        color: #FFFFFF;
-        margin: 0 0 11px 0;
-        max-width: 570px;
-    }
+.subscribe .title {
+    color: #FFFFFF;
 }
 .subscribe-box {
     display: flex;
-    justify-content: center;
     align-items: center;
-    margin-top: 20px;
+    justify-content: center;
+    max-width: 400px;
+    margin: 0 auto;
 }
 .subscribe__email {
-    border-radius: 18px 0 0 18px;
-    height: 73px;
-    color: var(--gray-400, #98A2B3);
-    font-family: Jost;
+    flex-basis: calc(100% - 136px);
+    font-family: 'Jost', sans-serif;
     font-size: 18px;
-    font-style: normal;
     font-weight: 500;
-    line-height: 20px; 
     border: none;
-    padding-left: 20px;
+    border-radius: 18px 0 0 18px;
+    padding: 28px 20px 27px 20px;
+}
+.subscribe__email:focus {
+    outline: none;
 }
 .subscribe__btn {
-    border-radius: 0 18px 18px 0;
-    height: 75px;
-    background-color: #CDA274;
-    color: var(--White, #FFF);
-    font-family: Jost;
+    flex-basis: 136px;
+    font-family: 'Jost', sans-serif;
     font-size: 18px;
+    color: #FFF;
     font-weight: 600;
-    padding: 0 26px;
+    border-radius: 0 18px 18px 0;
+    padding: 28px 20px 27px 20px;
+    background-color: #CDA274;
+    border: none;
+    border-left: 1px solid transparent;
+    cursor: pointer;
+    transition: .5s;
+}
+.subscribe__btn:hover {
+    color: #CDA274;
+    background-color: #FFF;
+    border-left: 1px solid #CDA274;
 }
 /*CONTACT*/
-.contact__section {
-    margin-bottom: 156px;
-}
 .title__contact {
     max-width: 636px;
     text-align: center;
@@ -1144,25 +1127,21 @@ article {
 .thumb {
     position: relative;
     overflow: hidden;
-    height: 351px;
+    width: 100%;
+    height: 356px;
 }
 .thumb__img {
     width: 100%;
-    height: 351px;
-}
-.thumb__info {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
+    height: 100%;
     position: absolute;
-    bottom: 0%;
-    left: 36.6%;
-    border-radius: 37px 37px 0px 0px;
-    background-color: #FFFFFF;
-    padding: 41px 78px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    object-fit: cover;
+    z-index: -1;
 }
 .thumb__title {
-    margin: 0;
+    margin-bottom: 0;
 }
 .breadcrumbs {
     display: flex;
@@ -1427,6 +1406,7 @@ article {
     .title {
         font-size: 40px;
     }
+
     .about {
         gap: 5%;
     }
@@ -1447,14 +1427,20 @@ article {
     .about__call>p:last-child {
         font-size: 18px;
     }
+
     .link {
         font-size: 16px;
     }
-    .title__slide {
-        margin-bottom: 88px;
+
+    .swiper-feedback {
+        margin-top: 100px;
     }
     .swiper-feedback__slide {
         padding: 88px 150px 90px;
+    }
+    .swiper-feedback .title {
+        max-width: 350px;
+        margin: 0 auto;
     }
     .swiper-feedback__next {
         right: 50px;
@@ -1462,24 +1448,22 @@ article {
     .swiper-feedback__prev {
         left: 50px;
     }
-    .swiper-text {
-        font-size: 25px;
-        max-width: 450px;
-    }
     .swiper-author {
         margin-top: 50px;
         font-size: 20px;
     }
+
     .brands {
         justify-content: center;
         flex-wrap: wrap;
         gap: 12vw;
-        margin: 150px 0;
     }
+
     .stats__section {
         margin-bottom: 160px;
         padding: 140px 0;
     }
+
     .articles__section {
         margin-bottom: 150px;
     }
@@ -1505,9 +1489,11 @@ article {
     .articles {
         gap: 15px;
     }
+
     .subscribe__section {
         margin-bottom: 150px;
     }
+
     .page-error {
         padding: 120px 0 180px 0;
     }
@@ -1518,9 +1504,11 @@ article {
         font-size: 30px;
         max-width: 450px;
     }
+
     .content {
         grid-template-columns: 1fr;
     }
+
     .footer__info {
         display: grid;
         grid-template-columns: 1fr 170px;
@@ -1543,6 +1531,12 @@ article {
     .container {
         max-width: 600px
     }
+
+    .page {
+        padding-top: 120px;
+        padding-bottom: 120px;
+    }
+
     .hero {
         height: calc(100vh - 131px);
         margin-bottom: 120px;
@@ -1552,7 +1546,8 @@ article {
     }
     .about {
         flex-direction: column;
-        gap: 75px
+        gap: 75px;
+        margin-bottom: 100px;
     }
     .about__thumb {
         width: 100%;
@@ -1561,14 +1556,16 @@ article {
     .about__text, .about__thumb {
         flex-basis: auto;
     }
-    .title__slide {
-        margin-bottom: 60px;
-    }
     .swiper-feedback__slide {
-        padding: 50px 150px 65px;
+        padding: 50px;
+    }
+    .swiper-text {
+        font-size: 25px;
+        padding-left: 50px;
+        padding-right: 50px;
     }
     .stats__section {
-        margin-bottom: 100px;
+        margin-bottom: 50px;
         padding: 80px 0;
     }
     .stats__list {
@@ -1588,6 +1585,7 @@ article {
         align-items: start;
         display: inherit;
         text-align: center;
+        padding: 60px 0;
     }
     .footer__info {
         grid-template-columns: 1fr;
@@ -1610,6 +1608,10 @@ article {
     .header {
         padding: 13px 0;
     }
+    .page {
+        padding-top: 70px;
+        padding-bottom: 70px;
+    }
     .header__menu {
         display: block;
     }
@@ -1623,23 +1625,42 @@ article {
     .hero__title {
         font-size: 13vw;
     }
+    .hero__section {
+        margin-bottom: 0;
+    }.swiper-feedback {
+        margin-top: 100px;
+    }
     .swiper-feedback__slide {
         padding: 50px 10px;
     }
-    .swiper-feedback .title {
-        max-width: 250px;
+    .swiper-text {
+        font-size: 20px;
+    }
+    .swiper-feedback__next {
+        right: 50px;
+    }
+    .swiper-feedback__prev {
+        left: 50px;
+    }
+    .swiper-feedback__next, .swiper-feedback__prev {
+        bottom: 70px;
+        top: inherit;
+        background-color: #f4f0ec;
+    }
+    .stats__section {
+        margin-bottom: 0px;
     }
     .title {
         font-size: 30px;
     }
-    .suscribe {
-        & h2, p {
-            max-width: 311px;
-            text-align: center;
-        }
-    }
     .title__contact {
         margin-bottom: 50px;
+    }
+    .subscribe__email {
+        padding: 20px ;
+    }
+    .subscribe__btn {
+        padding: 20px;
     }
     .contact-form {
         grid-template-columns: 1fr;
@@ -1649,13 +1670,24 @@ article {
         grid-column: 1 / 2;
     }
     .footer {
-        padding: 20px 0;
+        padding: 50px 0;
     }
     .footer__address {
         text-align: center;
     }
 }
 @media (max-width: 500px) {
+    .page {
+        padding-top: 50px;
+        padding-bottom: 50px;
+    }
+    .swiper-feedback__next, .swiper-feedback__prev {
+        bottom: 50px;
+    }
+    .swiper-text {
+        padding-left: 30px;
+        padding-right: 30px;
+    }
     .stats__section {
         padding: 50px 0;
     }
@@ -1672,6 +1704,25 @@ article {
     }
     .stats__item::after {
         display: none;
+    }
+    .subscribe {
+        padding: 50px 20px;
+    }
+    .subscribe-box {
+        flex-direction: column;
+        gap: 20px;
+    }
+    .subscribe__email {
+        flex-basis: auto;
+        width: 100%;
+        box-sizing: border-box;
+        border-radius: 18px;
+    }
+    .subscribe__btn {
+        flex-basis: auto;
+        width: 100%;
+        max-width: 200px;
+        border-radius: 18px;
     }
 }
 
