--- a/css/style.css
+++ b/css/style.css
@@ -1490,6 +1490,42 @@ article {
         gap: 15px;
     }
 
+    .contact__box {
+        margin-top: 80px;
+        flex-direction: column-reverse;
+    }
+    .contact-list {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        justify-items: center;
+    }
+    .contact-list__item::before {
+        width: 44px;
+        height: 44px;
+    }
+    .contact-list__item {
+        margin-bottom: 0;
+    }
+    .contact-list__link {
+        font-size: 18px;
+    }
+    .contact__info, .contact__form {
+        flex-basis: auto;
+        width: 100%;
+    }
+    .contact__form {
+        flex-grow: 1;
+    }
+    .contact-form {
+        gap: 36px;
+    }
+    .contact-form__textarea {
+        margin-bottom: 20px;
+    }
+    .contact-form__btn {
+        padding-top: 0px;
+    }
+
     .subscribe__section {
         margin-bottom: 150px;
     }
@@ -1599,6 +1635,13 @@ article {
         padding: 0px 18px 0 0;
     }
 
+    .contact-list__item {
+        display: inherit;
+        gap: 8px;
+    }
+    .contact-list__item::before {
+        margin: 0 auto;
+    }
     .contact-form .contact-form__btn {
         text-align: center;
     }
@@ -1715,6 +1758,23 @@ article {
     .contact-form__textarea, .contact-form__btn, .contact-form__checkbox {
         grid-column: 1 / 2;
     }
+    .contact-list {
+        grid-template-columns: 1fr;
+        gap: 20px;
+    }
+    .contact-list__item::before {
+        margin: 0;
+    }
+    .contact-list__item {
+        display: flex;
+        justify-content:  center;
+        width: 100%;
+        gap: 15px;
+    }
+    .contact-form__textarea {
+        margin-bottom: 50px;
+    }
+
     .footer {
         padding: 50px 0;
     }
@@ -1758,6 +1818,10 @@ article {
     }
     .article-main__content {
         padding: 0px;
+    }
+
+    .contact-list__item {
+        justify-content: flex-start;
     }
 
     .subscribe {
