--- a/css/style.css
+++ b/css/style.css
@@ -1662,6 +1662,10 @@ article {
         text-align: center;
     }
 
+    .checkbox:checked + label, .checkbox:not(:checked) + label {
+        font-size: 16px;
+    }
+
 
     .footer {
         align-items: start;
@@ -1798,7 +1802,7 @@ article {
     }
 
     .checkbox:checked + label, .checkbox:not(:checked) + label {
-        font-size: 16px;
+        font-size: 14px;
     }
 
     .post__footer {
